--- a/Curso_JS_moderno/02-blackjack/assets/css/styles.css
+++ b/Curso_JS_moderno/02-blackjack/assets/css/styles.css
@@ -1,10 +1,8 @@
 html, body {
-
     margin: 0px;
-    background-color: teal;
+    background-color: #2F4F30;
     color: white;
 }
-
 
 
 .titulo {
@@ -13,12 +11,11 @@ html, body {
     color: white;
     padding: 20px;
     font-size: 25px;
-
 }
 
 .carta {
-    width: 150px;
     position: relative;
+    width: 150px;
     left: 100px;
     margin-left: -75px;
 }
